2011-03-21 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-04
	* merge from branch
	* fixes to monitoring usage 
	* fix loss of total counters when all slave processes
	crash
	
2011-02-16 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-00-02
	* add forgotten mutex_destroy/mutex_init in slave process recycle

2011-02-14 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-00-01
	* more fixes with psindex reporting to db
	
2011-02-09 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-00-00
	* fix deadlock and minor issues with path index 

2011-02-04 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-03
	* added rate statistics gathering to idie

2011-01-21 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-02
	* fix pathindex handling when path missing in index file
	* sleep 10 s in summarize to avoid tight loop when no msg present

2011-01-21 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-01
	* handling of path indices in scalers message table
	* added statistics gathering switch
	* some cleanup of xdata variables
	
2011-01-19 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-03-00
	* 02-08 xml buildfile migration
	* 02-09 macosx compat 
	* 02-10 removed compilation flags
	* 03-00 streamlining
	*       stream rate support 
	*       fix psid reporting
	
2010-10-13 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-07
	* exitOnError added for slave processes
	* latch inconsistent subprocess state to avoid flooding sentinel

2010-06-14 Andrea Bocci <andrea.bocci@cern.ch>

	* tag V02-02-06-02
	* add explicit type cast to msgbuf.mtype to quiet -Wsign-compare

2010-06-14 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-06-01
	* put back redirection for stderr 

2010-06-02 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-06-00
	* fix uninitialized macrostates at start of run

2010-05-21 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-02-06
	* add sentinel message for when edm::EP inopinately goes to stopping
