@@ -1,3 +1,9 @@
+2011-03-23 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V02-03-05
+	* put back begin job in mFU enabling thread
+	* remove unused infospace
+
 2011-03-21 Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V02-03-04
